Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-8220

Server crashes if started with --enforce-storage-engine option

    XMLWordPrintable

Details

    Description

      Server was built with
      cmake . -DCMAKE_BUILD_TYPE=Debug -DWITH_EMBEDDED_SERVER=YES

      Start server with default options and --enforce-storage-engine=InnoDB

      Error: Freeing overrun buffer  mysys/safemalloc.c:191, mysys/my_malloc.c:218, sql/sql_plugin.cc:1313, sql/sql_plugin.cc:3146, sql/sql_plugin.cc:3202, sql/sql_class.
      cc:1647, sql/sql_class.cc:1690, sql/sql_base.cc:9059
      Allocated at sql/sql_plugin.cc:974, sql/sql_plugin.cc:1035, sql/handler.cc:174, sql/mysqld.cc:4755, sql/mysqld.cc:5138, sql/mysqld.cc:5631, sql/main.cc:26, 0x7f9cbe
      cbaead
      150525 15:59:09 [ERROR] mysqld got signal 11 ;

      #3  <signal handler called>
      #4  0x00007f9cc1617a1b in intern_plugin_unlock (lex=0x0, plugin=0x7f9cbe4b05f0) at 10.1/sql/sql_plugin.cc:1329
      #5  0x00007f9cc161ccbf in unlock_variables (thd=0x7f9cac887070, vars=0x7f9cac887738) at 10.1/sql/sql_plugin.cc:3145
      #6  0x00007f9cc161cf31 in plugin_thdvar_cleanup (thd=0x7f9cac887070) at 10.1/sql/sql_plugin.cc:3201
      #7  0x00007f9cc15bf642 in THD::~THD (this=0x7f9cac887070, __in_chrg=<optimized out>) at 10.1/sql/sql_class.cc:1645
      #8  0x00007f9cc15bfa46 in THD::~THD (this=0x7f9cac887070, __in_chrg=<optimized out>) at 10.1/sql/sql_class.cc:1690
      #9  0x00007f9cc15a7ab7 in mysql_rm_tmp_tables () at 10.1/sql/sql_base.cc:9058
      #10 0x00007f9cc153b1e6 in mysqld_main (argc=12, argv=0x7f9cbe41e6a0) at 10.1/sql/mysqld.cc:5664

      Attachments

        Activity

          People

            serg Sergei Golubchik
            elenst Elena Stepanova
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 20m
                20m

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.