MDEV-8220 Server crashes if started with --enforce-storage-engine option